1. &#65279 problem fixed; 2. html {overflow-y: scroll;} added

--- a/lesson10_11-mini-project-online-shop/css/styles.css
+++ b/lesson10_11-mini-project-online-shop/css/styles.css
@@ -1,3 +1,6 @@
+html {
+overflow-y: scroll;
+}
 body, h3, h4{
 	margin:0;
 	padding: 0;
